--- a/src/main/webapp/static/gitkit-widget.html
+++ b/src/main/webapp/static/gitkit-widget.html
@@ -11,7 +11,7 @@
     <script type="text/javascript">
         var config = {
             widgetUrl: "https://wolfbeacon.herokuapp.com/oauth2callback",
-            signInSuccessUrl: "/",
+            signInSuccessUrl: "/gitkit/success",
             signOutUrl: "/logout?url=/",
             oobActionUrl: "/email",
             apiKey: "AIzaSyC--_IvJyE7G-KhxZDO3K00f_MzsVuLwrk",
