--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -47,7 +47,10 @@
                     <p> Welcome to the world’s first platform for Hackers and Organizers! </p>
                 </div>
                 <div class="subscribe">
-                    <form action="index.html" method="post"> <input type="email" name="email" class="subscribe-input" placeholder="somebody@example.com"> <button type="submit" class="button subscribe-submit">Stay Updated</button> </form>
+                    <form action="https://wolfbeacon.herokuapp.com/api/v1/mail/" method="post", id="mailingForm">
+                        <input type="email" name="emailAddress" class="subscribe-input" placeholder="somebody@example.com">
+                        <button type="submit" class="button subscribe-submit">Stay Updated</button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -154,6 +157,35 @@
                 });
         return false;
     }
+</script>
+<script type="application/javascript">
+    var form = document.getElementById("mailingForm");
+
+    form.onsubmit = function (e) {
+        // stop the regular form submission
+        e.preventDefault();
+
+        // collect the form data while iterating over the inputs
+        var data = {};
+        for (var i = 0, ii = form.length; i < ii; ++i) {
+            var input = form[i];
+            if (input.name) {
+                data[input.name] = input.value;
+            }
+        }
+
+        // construct an HTTP request
+        var xhr = new XMLHttpRequest();
+        xhr.open(form.method, form.action, true);
+        xhr.setRequestHeader('Content-Type', 'application/json; charset=UTF-8');
+
+        // send the collected data as JSON
+        xhr.send(JSON.stringify(data));
+
+        xhr.onloadend = function () {
+            // done
+        };
+    };
 </script>
 </body>
 
