--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -2,169 +2,94 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="Keywords" content=" ">
+    <meta name="description" content=" ">
+    <meta name="title" content="WolfBeacon || OSH">
+    <meta name="url" content=" ">
     <meta name="googlebot" content="noindex, nofollow">
     <meta name="robots" content="noindex, nofollow">
-    <title>WolfBeacon</title>
-    <link rel="stylesheet" href="/assets/css/style.css"> </head>
+    <meta property="og:description" content=" ">
+    <meta property="og:image" content="/">
+    <meta property="og:site_name" content=" ">
+    <meta property="og:title" content=" ">
+    <meta property="og:type" content=" ">
+    <meta property="og:url" content=" ">
+    <meta name="twitter:card" content=" ">
+    <meta name="twitter:url" content=" ">
+    <meta name="twitter:title" content=" ">
+    <meta name="twitter:description" content=" ">
+    <meta name="twitter:image" content="/">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/assets/img/favicon/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/img/favicon/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/img/favicon/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/img/favicon/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/assets/img/favicon/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/assets/img/favicon/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="/assets/img/favicon/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/assets/img/favicon/favicon-16x16.png" sizes="16x16" />
+    <meta name="application-name" content=" " />
+    <meta name="msapplication-TileColor" content="#EF5350" />
+    <meta name="msapplication-TileImage" content="/assets/img/favicon/mstile-144x144.png" />
+    <title> WolfBeacon || OSH </title>
+    <link rel="stylesheet" href="/assets/css/styles.css"> </head>
 
 <body>
-<header>
+<section class="cover">
     <div class="container">
-        <a href="#" onclick="backToTop();">
-            <div class="logo">WolfBeacon</div>
-        </a>
-        <ul class="nav-menu">
-            <a href="#features">
-                <li class="nav-item">Features</li>
-            </a>
-            <a href="#about">
-                <li class="nav-item">About</li>
-            </a>
-            <a href="#joinUs">
-                <li class="nav-item">Join Our Team</li>
-            </a>
-        </ul>
-    </div>
-</header>
-<section class="landing">
-    <div class="container">
-        <div class="row">
-            <div class="cols-50 landing-left">
-                <div class="main-img"> &nbsp; </div>
-                <div class="coming-soon">
-                    <p>Coming Soon On</p>
-                    <div class="cs-store">
-                        <div class="store-icn"><img src="/assets/img/android-icon.png"></div>
-                        <div class="store-icn"><img src="/assets/img/ios-icon.png"></div>
-                        <div class="store-icn"><img src="/assets/img/webapp-icon.png"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="cols-50 landing-right">
-                <div class="text-desc">
-                    <p> Welcome to the world’s first platform for Hackers and Organizers! </p>
-                </div>
-                <div class="subscribe">
-                    <form action="https://wolfbeacon.herokuapp.com/api/v1/mail/" method="post", id="mailingForm">
-                        <input type="email" name="emailAddress" class="subscribe-input" placeholder="somebody@example.com">
-                        <button type="submit" class="button subscribe-submit">Stay Updated</button>
-                    </form>
-                </div>
-            </div>
+        <div class="logo">WOLFBEACON</div>
+        <div class="title">
+            <h1 id="fold">The Ultimate Platform for Hackathons</h1>
+            <h2 id="fold">A beautiful, mobile-first platform. Built by hackers, for hackers. Sign up for the beta today!</h2> </div>
+        <div class="stayUpdatedContainer" id="fold">
+            <form class="stayUpdated" action="https://wolfbeacon.herokuapp.com/api/v1/mail/" method="post" , id="mailingForm">
+                <input class="stayUpdatedInput" type="textbox" name="email" placeholder="somebody@example.com">
+                <button type = "submit" class="updateButton">STAY UPDATED</button> </form>
         </div>
+        <div class="phones"> <img src="/assets/img/mobiles.png" alt="Previews of WolfBeacon mobile apps"> </div>
     </div>
 </section>
-<section class="features" id="features">
-    <h3 class="section-title">Features</h3>
+<section class="features">
     <div class="container">
-        <div class="row">
-            <div class="cols-33 fe-img">
-                <div class="fe-icon"><img src="/assets/img/open-source-icon.png"></div>
-            </div>
-            <div class="cols-66 fe-text">
-                <div class="fe-title">Open Source Software</div>
-                <div class="fe-desc">The whole platform is available for community customization on GitHub.</div>
-            </div>
-        </div>
-        <div class="row row-alt">
-            <div class="cols-33 fe-img">
-                <div class="fe-icon"><img src="/assets/img/no-ads-icon.png"></div>
-            </div>
-            <div class="cols-66 fe-text">
-                <div class="fe-title">Completely Free & No Ads</div>
-                <div class="fe-desc">Unlike most services which bombard users with Ads or secretly sell User Data, we offer the full service with no catches. Thanks to a passionate group of hackers who just want to create something awesome.</div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="cols-33 fe-img">
-                <div class="fe-icon"><img src="/assets/img/quick-signup-icon.png"></div>
-            </div>
-            <div class="cols-66 fe-text">
-                <div class="fe-title">Quick Sign-Ups</div>
-                <div class="fe-desc">Hackers are provided with all the information of a hackathon in one place. With an easy click registration you can favorite or apply to hackathon with a click of a button.</div>
-            </div>
-        </div>
-        <div class="row row-alt">
-            <div class="cols-33 fe-img">
-                <div class="fe-icon"><img src="/assets/img/open-source-icon.png"></div>
-            </div>
-            <div class="cols-66 fe-text">
-                <div class="fe-title">More Funding = Bigger Hackathons</div>
-                <div class="fe-desc">With free 1-on-1 consultation with hackathon organizers we provide the tools and expertise to increase the amount of funds your hackathon can receive. </div>
-            </div>
-        </div>
+        <div class="featureContainer"> <img src="/assets/img/features/globe.png" alt="Global" class="featureImg">
+            <h3 class="featureTitle">Global</h3>
+            <h4 class="featureText">View all hackathons happening across the world. Never miss a hackathon again.</h4> </div>
+        <div class="featureContainer"> <img src="/assets/img/features/iphone.png" alt="Mobile First" class="featureImg">
+            <h3 class="featureTitle">Mobile First</h3>
+            <h4 class="featureText">The world’s very first hackathon platform on mobile. You’re welcome.</h4> </div>
+        <div class="featureContainer"> <img src="/assets/img/features/finger.png" alt="Single Click" class="featureImg">
+            <h3 class="featureTitle">Single-Click</h3>
+            <h4 class="featureText">Register once. Then apply to all hackathons with a single click.</h4> </div>
     </div>
 </section>
-<section class="about" id="about">
+<footer>
     <div class="container">
-        <h3 class="section-title">Who We Are</h3>
-        <div class="about-text"> We're a group of passionate hackers who wanted a cool side project that has a big impact on hackathons around the globe. With hackathons giving so much to hackers it only makes sense to give back to the organizers so that they can make hackathons
-            much bigger thereby improving the experience for hackers once again! </div>
-        <div class="stats-container"> &nbsp;
-            <div class="people-cnt">
-                <div><strong>11</strong><br>People</div>
-            </div>
-            <div class="from">FROM</div>
-            <div class="country-cnt">
-                <div><strong>11</strong><br>Countries</div>
-            </div>
-        </div>
-        <div class="social-media">
-            <h3 class="title">Come find us on</h3>
-            <ul class="social-cnt">
-                <li class="sm-icon">&nbsp;</li>
-                <li class="sm-icon">&nbsp;</li>
-                <li class="sm-icon">&nbsp;</li>
-                <li class="sm-icon">&nbsp;</li>
-                <li class="sm-icon">&nbsp;</li>
-            </ul>
+        <div class="copyright">Made with <img src="/assets/img/heart.png" alt="love" height="16px"> by 11 hackers from 11 countries. Contact us at <span><a href="mailto:hello@wolfbeacon.com" class="mailLink">hello@wolfbeacon.com</a></span>.</div>
+        <div class="social">
+            <a href="https://www.facebook.com"><img src="/assets/img/facebook.png" alt="facebook" height="24px"></a>
+            <a href="https://www.twitter.com"><img src="/assets/img/twitter.png" alt="twitter" height="24px"></a>
         </div>
     </div>
-</section>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+</footer>
+<script src="https://cdn.jsdelivr.net/scrollreveal.js/3.1.4/scrollreveal.min.js"></script>
 <script type="text/javascript">
-    var $root = $('html, body');
-
-    function scrollTo()
-    {
-        $('a[href^="#"]:not([href="#"])').on('click', function(e)
-        {
-            e.preventDefault();
-            var $target = $(this.hash);
-            var hash = this.hash;
-            $root.stop().animate(
-                    {
-                        scrollTop: $target.offset().top - 70
-                    }, 900, 'swing', function()
-                    {
-                        location.hash = hash;
-                    });
-        })
-        return false;
-    }
-
-    function backToTop(e)
-    {
-        event.preventDefault();
-        $root.animate(
-                {
-                    scrollTop: 0
-                }, 900, 'swing', function()
-                {
-                    location.hash = "#";
-                });
-        return false;
-    }
+    window.sr = ScrollReveal();
+    sr.reveal('.featureContainer',
+            {
+                delay: 150,
+                duration: 350,
+                scale: 1,
+                curve: 'cubic-bezier(.05,.82,0,.99)',
+                reset: 'true'
+            }, 100);
 </script>
 <script type="application/javascript">
     var form = document.getElementById("mailingForm");
-
     form.onsubmit = function (e) {
         // stop the regular form submission
         e.preventDefault();
-
         // collect the form data while iterating over the inputs
         var data = {};
         for (var i = 0, ii = form.length; i < ii; ++i) {
@@ -173,15 +98,12 @@
                 data[input.name] = input.value;
             }
         }
-
         // construct an HTTP request
         var xhr = new XMLHttpRequest();
         xhr.open(form.method, form.action, true);
         xhr.setRequestHeader('Content-Type', 'application/json; charset=UTF-8');
-
         // send the collected data as JSON
         xhr.send(JSON.stringify(data));
-
         xhr.onloadend = function () {
             // done
         };
